fix: GitHub publish initializes git repo before gh repo create
The 'Publish to GitHub' post-generation action now runs:
  git init && git add . && git commit && gh repo create --source . --push

Previously it only ran gh repo create, which failed with 'current
directory is not a git repository' because the generated project
had no git repo.

Also:
- Add 'git' availability check before publish
- Document --enable-native-access=ALL-UNNAMED in README